[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/source/background_mockup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Menu/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Select.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu/llpixel/LLPIXEL3.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/LevelObjects/SceneTransition.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 160.151, 95.8488 )
scale = Vector2( 0.63, 0.6 )
texture = ExtResource( 2 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 16, 144 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 26.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 176.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 47.0
margin_bottom = 48.0

[node name="StartLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 47.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="QuitLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 47.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FadeOutHub" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
use_parent_material = false
TIME = 0.75
direction = -1

[node name="FadeInHub" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
use_parent_material = false
